--- a/llt/core_test/testcore_test/src/CMakeLists.txt
+++ b/llt/core_test/testcore_test/src/CMakeLists.txt
@@ -12,6 +12,7 @@ set(TEST_DIR ${ROOT_DIR}/test)
 set(GOOGLETEST_DIR ${TEST_DIR}/3rdparty/googletest)
 set(GTEST_INC_DIR ${GOOGLETEST_DIR}/googletest/include)
 set(MOCKCPP_DIR ${TEST_DIR}/3rdparty/mockcpp)
+set(MOCKCPP_INC_DIR ${MOCKCPP_DIR}/include)
 
 # source code
 set(SRC_DIR ${ROOT_DIR}/src)
@@ -23,11 +24,13 @@ aux_source_directory(${LIB_DIR} SRC_LIST)
 aux_source_directory(${TESTCORE_DIR} SRC_LIST)
 aux_source_directory(. SRC_LIST)
 
-include_directories(${API_DIR} ${INC_DIR} ${LIB_DIR} ${TESTCORE_DIR} ${GTEST_INC_DIR})
+include_directories(${API_DIR} ${INC_DIR} ${LIB_DIR} ${TESTCORE_DIR} ${GTEST_INC_DIR}
+                    ${MOCKCPP_INC_DIR})
 
 add_executable(${PROJ_NAME})
 target_sources(${PROJ_NAME} PRIVATE ${SRC_LIST})
 
-target_link_libraries(${PROJ_NAME} gtest)
+target_link_libraries(${PROJ_NAME} gtest mockcpp)
 
 add_subdirectory(${GOOGLETEST_DIR} googletest)
+add_subdirectory(${MOCKCPP_DIR} mockcpp)
